@@ -129,6 +129,7 @@
 
     Event Console:
     * 4132 Monitoring notifications: Add EC_ORIG_HOST to notifiation context...
+    * 4148 EC: reorder entries in Performance snapin, add overflows and load
     * 4097 FIX: Event console: Make writing of status file more robust...
     * 4147 FIX: Always show rule analyser result on Generate, not only after previous Try out...
 
